--- a/src/main/resources/templates/customers/customerDetails.html
+++ b/src/main/resources/templates/customers/customerDetails.html
@@ -2,21 +2,105 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+              integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+              crossorigin="anonymous"/>
         <title>Customer Portal</title>
     </head>
     <body>
-        <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+                integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+                integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-        <form action="#" th:action="@{/customers/}" th:object="${customer}" method="post">
-            <input type="hidden" th:field="*{id}"/>
-            <input type="text" th:field="*{name}"/>
-            <input type="email" th:field="*{email}"/>
-            <input type="tel" th:field="*{phone}"/>
-            <input type="number" th:field="*{totalSales}"/>
-            <input type="submit"/>
-        </form>
+        <div class="container" style="padding-bottom: 25px;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="#">Customer Portal</a>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/customers">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/reports/sales">Reports</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0" th:action="@{/logout}" method="post">
+                        <span th:inline="text">Hi, [[${#httpServletRequest.remoteUser}]]!</span>
+                        <button class="btn-link my-2 my-sm-0" type="submit">Logout</button>
+                    </form>
+                </div>
+            </nav>
+        </div>
+
+        <div class="container">
+            <div class="row justify-content-md-center" style="padding-bottom:10px;">
+                <div class="col text-center" th:switch="${customer.id}">
+                    <h1 th:case="null" class="display-4" style="font-size: 2.5em;">Add new customer</h1>
+                    <h1 th:case="*" class="display-4" style="font-size: 2.5em;">Edit customer</h1>
+                </div>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-8">
+                    <form action="#" th:action="@{/customers/}" th:object="${customer}" method="post">
+                        <input type="hidden" th:field="*{id}"/>
+
+                        <div class="form-group row">
+                            <label for="customerName" class="col-sm-2 col-form-label">Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="customerName" placeholder="Name"  th:field="*{name}"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="email" class="col-sm-2 col-form-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" id="email" placeholder="Email"  th:field="*{email}"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                            <div class="col-sm-10">
+                                <input type="tel" class="form-control" id="phone" placeholder="Phone"  th:field="*{phone}"/>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="totalSales" class="col-sm-2 col-form-label">Total Sales</label>
+                            <div class="col-sm-10">
+                                <input type="number" class="form-control" id="totalSales" placeholder="Total Sales"  th:field="*{totalSales}"/>
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <div class="col-sm-10">
+                                <button type="submit" class="btn btn-primary">Save</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+       <!-- <div class="container">
+            <div class="row">
+                <div class="col">
+                    <form action="#" th:action="@{/customers/}" th:object="${customer}" method="post">
+                        <input type="hidden" th:field="*{id}"/>
+                        <input type="text" th:field="*{name}"/>
+                        <input type="email" th:field="*{email}"/>
+                        <input type="tel" th:field="*{phone}"/>
+                        <input type="number" th:field="*{totalSales}"/>
+                        <input type="submit"/>
+                    </form>
+                </div>
+            </div>
+        </div>-->
     </body>
 </html>
