--- a/src/main/resources/templates/reports/topSales.html
+++ b/src/main/resources/templates/reports/topSales.html
@@ -26,10 +26,10 @@
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link" href="/customers">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="/reports/sales">Reports</a>
                         </li>
                     </ul>
@@ -44,33 +44,29 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+                    <h1 class="display-4">
+                        Top 5 Customers by sales
+                    </h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
                     <table class="table">
                         <tr>
                             <th>Name</th>
                             <th>Email</th>
                             <th>Phone</th>
                             <th>Total Sales</th>
-                            <th></th>
                         </tr>
                         <tr th:each="customer : ${customers}">
                             <td th:text="${customer.name}"></td>
                             <td th:text="${customer.email}"></td>
                             <td th:text="${customer.phone}"></td>
                             <td th:text="${customer.totalSales}"></td>
-                            <td>
-                                <a href="details.html"
-                                   th:href="@{/customers/{customerId}(customerId=${customer.id})}">edit</a>
-                            </td>
                         </tr>
                     </table>
-
-                    <a href="/customers/new">Add new customer</a>
                 </div>
             </div>
         </div>
-
-
-
-
     </body>
 </html>
