--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -26,7 +26,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="/customers">Home</a>
                         </li>
                         <li class="nav-item">
@@ -44,27 +44,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="display-4">
-                        Top 5 Customers by sales
-                    </h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <table class="table">
-                        <tr>
-                            <th>Name</th>
-                            <th>Email</th>
-                            <th>Phone</th>
-                            <th>Total Sales</th>
-                        </tr>
-                        <tr th:each="customer : ${customers}">
-                            <td th:text="${customer.name}"></td>
-                            <td th:text="${customer.email}"></td>
-                            <td th:text="${customer.phone}"></td>
-                            <td th:text="${customer.totalSales}"></td>
-                        </tr>
-                    </table>
+                    <div class="alert alert-info" role="alert">
+                        Ooooops! Something goes wrong! Please contact system administrator!
+                    </div>
                 </div>
             </div>
         </div>
